Fix Tesseract JNA path, normalize property names, clean up services, and patch CVEs
- Fix UnsatisfiedLinkError on Apple Silicon: use NativeLibrary.addSearchPath() instead
  of jna.library.path system property so it works at runtime, not just JVM startup
- Fix installTesseract Gradle task: resolve brew by absolute path since Gradle daemon
  PATH omits Homebrew bin
- Add backend property name normalization in EmailParserService so rent receipts are
  correctly tied to properties regardless of how the model formats the name
- Add GlobalExceptionHandler to map ResponseStatusException/IllegalArgumentException/
  IOException to consistent JSON error responses; replace RuntimeException with
  ResponseStatusException(NOT_FOUND) in all services
- Refactor BackupController to use inner records instead of raw Maps
- Replace spring StringUtils with commons-lang3 StringUtils throughout; replace
  Collectors.toList() with toList(); use Sort in IncomeService.findAll()
- Build: bump msal4j 1.17.2→1.22.0 (fixes CVE-2025-53864 via nimbus-jose-jwt 10.0.2)
  and commons-lang3 3.17.0→3.18.0 (fixes CVE-2025-48924); use direct ext property
  assignment and move brewCmd to top-level alongside npmCmd